--- a/encuentros.html
+++ b/encuentros.html
@@ -13,11 +13,10 @@
         <img src="encabezadoIndex.jpg" alt="Logo de RedAge" class="logo-encabezado">
     </header>
 
-      <!-- Barra de navegación -->
-      <nav class="navegacion">
-        <a href="index.html">PROGES</a>
-    </nav>
-
+   <!-- Barra de navegación -->
+   <nav class="navegacion">
+    <a href="index.html">Atrás</a>
+</nav>
     <!-- Contenido principal -->
     <main>
         <section class="info-encuentros">
