--- a/integrantes.html
+++ b/integrantes.html
@@ -14,7 +14,7 @@
 
     <!-- Barra de navegación -->
     <nav class="navegacion">
-        <a href="index.html">PROGES</a>
+        <a href="index.html">Atrás</a>
     </nav>
 
     <!-- Contenido principal -->
