--- a/index.html
+++ b/index.html
@@ -1,45 +1,98 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página del Equipo</title>
-    <link rel="stylesheet" href="estilos.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Página del Equipo</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Fuente Poppins -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #f8f9fa;
+    }
+    /* Encabezado */
+    .encabezado img {
+      width: 100%;
+      height: auto;
+    }
+    /* Barra de navegación personalizada */
+    .navbar-custom {
+      background-color: #343a40;
+    }
+    .navbar-custom .nav-link {
+      color: white !important;
+      margin: 0 15px;
+      font-weight: bold;
+    }
+    .navbar-custom .nav-link:hover {
+      color: #ffc107 !important;
+    }
+    /* Contenedor de contenido principal */
+    .info-proges {
+      background: white;
+      padding: 40px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+    ul li {
+      margin-bottom: 10px;
+    }
+  </style>
 </head>
 <body>
-    <!-- Encabezado con la imagen -->
-    <header class="encabezado">
-        <img src="encabezadoIndex.jpg" alt="Logo de RedAge" class="logo-encabezado">
-    </header>
-
-    <!-- Barra de navegación debajo del encabezado -->
-    <nav class="navegacion">
-        <a href="index.html">PROGES</a>
-        <a href="integrantes.html">INTEGRANTES</a>
-        <a href="encuentros.html">ENCUENTROS ACADÉMICOS</a>
-        <a href="investigación.html">LÍNEAS</a>
-        <a href="act.html">OTROS</a>
-    </nav>
-
-    <!-- Contenido principal -->
-    <main>
-        <section class="info-proges">
-            <h1>PROGES</h1> <!-- procesos de gestion educativa  -->
-            <h2>Identidad</h2>
-            <p>Quienes formamos parte del equipo PROGES nos consideramos profesionales de la educación interesados en conocer, registrar e intercambiar saberes y experiencias asociadas a los procesos de innovación y cambio educativo. Constituímos un espacio abierto a los aportes y la participación activa de quienes se sientan convocados a ser parte de aquellas actividades asociadas a la gestión educativa que les resulten de interés. Nuestro accionar profesional se encuentra en los siguientes principios:</p>
-            <ul>
-                <li><strong>Ética</strong> - atendiendo al conjunto de normas y valores que hacen al quehacer profesional.</li>
-                <li><strong>Colaboración</strong> - poniendo énfasis en prácticas colaborativas que enriquezcan los procesos formativos, de investigación y de desarrollo profesional.</li>
-                <li><strong>Independencia</strong> - teniendo en cuenta que la pertenencia a este equipo queda regulada por la línea de actividad a la que se integre cada persona, sin generar por ello otros compromisos que trasciendan las tareas compartidas.</li>
-                <li><strong>Respeto</strong> - cuidando atender a las distintas opiniones, buscando integrar visiones en función de objetivos comunes.</li>
-            </ul>
-            <h2>Marco de actuación</h2>
-            <p>Este equipo tiene como denominador común el pertenecer a la Red de Apoyo a la Gestión Educativa (RedAGE), como clúster especializado en temas de gestión educativa, el cual nuclea a diversas instituciones y especialistas del área, tanto a nivel nacional como internacional. La creación de PROGES surge ante una convocatoria realizada en 2023 por RedAGE Uruguay.</p>
-        </section>
-    </main>
-
+  <!-- Encabezado -->
+  <header class="encabezado">
+    <img src="encabezadoIndex.jpg" alt="Logo de RedAge">
+  </header>
+  
+  <!-- Barra de navegación -->
+  <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
+    <div class="container justify-content-center">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="integrantes.html">INTEGRANTES</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="encuentros.html">ENCUENTROS ACADÉMICOS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="investigación.html">LÍNEAS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="act.html">OTROS</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  
+  <!-- Contenido principal -->
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-10 info-proges">
+        <h1 class="text-center text-primary">PROGES</h1>
+        <h2 class="text-secondary">Identidad</h2>
+        <p>
+          Quienes formamos parte del equipo PROGES nos consideramos profesionales de la educación interesados en conocer, registrar e intercambiar saberes y experiencias asociadas a los procesos de innovación y cambio educativo...
+        </p>
+        <ul>
+          <li><strong>Ética</strong> - atendiendo al conjunto de normas y valores que hacen al quehacer profesional.</li>
+          <li><strong>Colaboración</strong> - poniendo énfasis en prácticas colaborativas que enriquezcan los procesos formativos, de investigación y de desarrollo profesional.</li>
+          <li><strong>Independencia</strong> - teniendo en cuenta que la pertenencia a este equipo queda regulada por la línea de actividad a la que se integre cada persona...</li>
+          <li><strong>Respeto</strong> - cuidando atender a las distintas opiniones, buscando integrar visiones en función de objetivos comunes.</li>
+        </ul>
+        <h2 class="text-secondary">Marco de actuación</h2>
+        <p>
+          Este equipo tiene como denominador común el pertenecer a la Red de Apoyo a la Gestión Educativa (RedAGE), como clúster especializado en temas de gestión educativa...
+        </p>
+      </div>
+    </div>
+  </div>
+  
+  <!-- Bootstrap JS Bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
-
 
