--- a/integrantes.html
+++ b/integrantes.html
@@ -51,7 +51,7 @@
               <img src="INES FOTO.jpg" alt="María Inés Vázquez Clavera" class="rounded-circle" style="width:150px; height:150px; object-fit: cover;">
             </div>
             <h3 class="card-title mt-3 text-center">
-                María Inés Vázquez Clavera <span style="font-size: 0.8em;">(Coordinadora)</span>
+                María Inés Vázquez Clavera <span class="subtitulo">(Coordinadora)</span>
             </h3>            
             <p class="card-text">
               Doctora en Educación (UAB/España) y Psicóloga (UdelaR/ Uruguay). Integra el Sistema Nacional de Investigadores desde hace más de una década. Se desempeña como investigadora-evaluadora de la Agencia Nacional de Investigación e Innovación del Consejo Nacional de Ciencia y Tecnología (CONACYT) de Paraguay. Es colaboradora oficial del Equipo de investigación sobre Desarrollo Organizacional (EDO), de la Universidad Autónoma de Barcelona. Coordina el equipo de investigación asociado a RedAGE, PROGES. Dirige la publicación semestral GestionArte, revista especializada en temas de Gestión educativa. Integra el Comité Ejecutivo de Red Internacional de Apoyo a la Gestión Educativa (RedAGE). Actualmente se desempeña como Coordinadora Académica del Instituto Universitario Elbio Fernández.
