Se agregaron datos adicionales y correccion de errores

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
     <div class="container justify-content-center">
       <ul class="navbar-nav">
         <li class="nav-item">
+          <a class="nav-link" href="index.html">¿QUIENES SOMOS?</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="integrantes.html">INTEGRANTES</a>
         </li>
         <li class="nav-item">
@@ -62,7 +65,7 @@
           <a class="nav-link" href="investigación.html">LÍNEAS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="act.html">OTROS</a>
+          <a class="nav-link" href="act.html">CONTACTO</a>
         </li>
       </ul>
     </div>
@@ -75,8 +78,9 @@
         <h1 class="text-center text-primary">PROGES</h1>
         <h2 class="text-secondary">Identidad</h2>
         <p>
-          Quienes formamos parte del equipo PROGES nos consideramos profesionales de la educación interesados en conocer, registrar e intercambiar saberes y experiencias asociadas a los procesos de innovación y cambio educativo...
+          Quienes formamos parte del equipo PROGES nos consideramos profesionales de la educación interesados en conocer, registrar e intercambiar saberes y experiencias asociadas a los procesos de innovación y cambio educativo. 
         </p>
+        <p>Nos interesa promover espacios para la participación activa de quienes se sientan convocados a ser parte de las líneas en las que venimos trabajando. Nuestro accionar profesional se orienta en los siguientes principios:</p>
         <ul>
           <li><strong>Ética</strong> - atendiendo al conjunto de normas y valores que hacen al quehacer profesional.</li>
           <li><strong>Colaboración</strong> - poniendo énfasis en prácticas colaborativas que enriquezcan los procesos formativos, de investigación y de desarrollo profesional.</li>
@@ -85,7 +89,7 @@
         </ul>
         <h2 class="text-secondary">Marco de actuación</h2>
         <p>
-          Este equipo tiene como denominador común el pertenecer a la Red de Apoyo a la Gestión Educativa (RedAGE), como clúster especializado en temas de gestión educativa...
+          Este equipo tiene como denominador común el contar con experiencia en temas de gestión educativa y pertenecer a la Red de Apoyo a la Gestión Educativa (RedAGE), como clúster especializado en estas temáticas.
         </p>
       </div>
     </div>
