--- a/act.html
+++ b/act.html
@@ -1,61 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-    <style>
-        /* Estilos para el aviso */
-        .alerta {
-            position: fixed;
-            top: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: #ffcc00;
-            color: #000;
-            padding: 30px 40px;
-            border-radius: 10px;
-            font-size: 18px;
-            font-weight: bold;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
-            text-align: center;
-            z-index: 1000;
-            opacity: 1;
-            transition: opacity 1s ease-out;
-        }
-
-        /* Estilos del botón */
-        .btn-volver {
-            display: inline-block;
-            margin-top: 15px;
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
-            font-size: 16px;
-            font-weight: bold;
-            text-decoration: none;
-            border-radius: 5px;
-            border: none;
-            cursor: pointer;
-            transition: background 0.3s ease, transform 0.2s ease;
-        }
-
-        .btn-volver:hover {
-            background-color: #0056b3;
-            transform: scale(1.05);
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contacto - PROGES</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="estilos.css">
+  <style>
+    .toast-container {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      z-index: 1050;
+    }
+  </style>
 </head>
 <body>
+  <!-- Encabezado -->
+  <header class="text-center" style="padding: 0;">
+    <img src="encabezadoIndex.jpg" alt="Logo de RedAge" class="img-fluid" style="width: 100%; height: auto; display: block;">
+  </header>
+  
+  
+  <!-- Barra de navegación -->
+  <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
+    <div class="container justify-content-center">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">¿QUIENES SOMOS?</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="integrantes.html">INTEGRANTES</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="encuentros.html">ENCUENTROS ACADÉMICOS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="investigación.html">LÍNEAS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="act.html">CONTACTO</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
-   <div class="alerta" id="alerta">
-       🚧 ¡Página en construcción! 🚧
-       <br>
-       <button class="btn-volver" onclick="window.location.href='index.html'">Volver a la página principal</button>
-   </div>
+  <!-- Contenido principal -->
+  <main class="container py-5 text-center">
+    <h2 class="fw-bold">Contáctanos</h2>
+    <p class="lead">Si necesitas más información, no dudes en contactarnos.</p>
+    
+    <!-- Información de contacto -->
+    <div class="mt-4">
+      <p class="fs-5">Correo: <span id="correo">proges@gmail.com</span> 
+        <button class="btn btn-outline-primary btn-sm" onclick="copiarCorreo()">Copiar</button>
+      </p>
+    </div>
+  </main>
 
+  <!-- Contenedor del mensaje flotante -->
+  <div class="toast-container">
+    <div id="toast" class="toast align-items-center text-white bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="d-flex">
+        <div class="toast-body">
+          Correo copiado con éxito.
+        </div>
+        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+      </div>
+    </div>
+  </div>
 
+  <script>
+    function copiarCorreo() {
+      const correo = document.getElementById("correo").textContent;
+      navigator.clipboard.writeText(correo).then(() => {
+        const toastEl = document.getElementById('toast');
+        const toast = new bootstrap.Toast(toastEl);
+        toast.show();
+      });
+    }
+  </script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
