--- a/encuentros.html
+++ b/encuentros.html
@@ -10,14 +10,31 @@
 </head>
 <body>
   <!-- Encabezado -->
-  <header class="bg-dark text-white text-center py-4">
-    <img src="encabezadoIndex.jpg" alt="Logo de RedAge" class="img-fluid">
+  <header class="text-center" style="padding: 0;">
+    <img src="encabezadoIndex.jpg" alt="Logo de RedAge" class="img-fluid" style="width: 100%; height: auto; display: block;">
   </header>
+  
 
   <!-- Barra de navegación -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <a class="navbar-brand text-white" href="index.html">Atrás</a>
+  <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
+    <div class="container justify-content-center">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">¿QUIENES SOMOS?</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="integrantes.html">INTEGRANTES</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="encuentros.html">ENCUENTROS ACADÉMICOS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="investigación.html">LÍNEAS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="act.html">CONTACTO</a>
+        </li>
+      </ul>
     </div>
   </nav>
 
@@ -26,7 +43,7 @@
     <section class="text-center mb-5">
       <h1 class="fw-bold">Encuentros Académicos</h1>
       <p class="lead">
-        Aquí se presentan los encuentros académicos nacionales e internacionales, en los que PROGES se ha presentado desde su creación en 2023:
+        Aquí se presentan los encuentros académicos nacionales e internacionales, en los que el equipo PROGES ha presentado aportes desde su creación en 2023:
       </p>
     </section>
     
@@ -88,6 +105,7 @@
         <div class="card h-100">
           <div class="card-body">
             <h2 class="card-title">VIII CONGRESO INTERNACIONAL EDO (2025)</h2>
+            <p class="card-subtitle mb-3 text-muted">(Universidad Autónoma de Barcelona; España)</p>
             <h3>Objetivos del Congreso:</h3>
             <ul>
               <li>Analizar y debatir los nuevos planteamientos y estrategias utilizadas en los procesos de creación y gestión del conocimiento en la Sociedad 5.0.</li>
