--- a/integrantes.html
+++ b/integrantes.html
@@ -6,26 +6,34 @@
   <title>Integrantes del equipo PROGES</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="integrantes.css">
-  <style>
-    /* Opcional: si deseas forzar que las tarjetas tengan una altura fija, puedes definirla aquí y hacer scroll interno en el texto */
-    /* .card {
-      height: 600px;
-    }
-    .card-text {
-      overflow-y: auto;
-    } */
-  </style>
+  
 </head>
 <body>
   <!-- Encabezado -->
-  <header class="bg-dark text-white text-center py-4">
-    <img src="encabezadoIndex.jpg" alt="Logo de RedAge" class="img-fluid">
+  <header class="text-center" style="padding: 0;">
+    <img src="encabezadoIndex.jpg" alt="Logo de RedAge" class="img-fluid" style="width: 100%; height: auto; display: block;">
   </header>
+  
 
-  <!-- Barra de navegación -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <a class="navbar-brand text-white" href="index.html">Atrás</a>
+  <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
+    <div class="container justify-content-center">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">¿QUIENES SOMOS?</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="integrantes.html">INTEGRANTES</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="encuentros.html">ENCUENTROS ACADÉMICOS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="investigación.html">LÍNEAS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="act.html">CONTACTO</a>
+        </li>
+      </ul>
     </div>
   </nav>
 
@@ -34,7 +42,7 @@
     <section class="text-center mb-5">
       <h1 class="fw-bold">Integrantes</h1>
       <p class="lead">
-        Son presentados aquí a quienes integran el núcleo básico del equipo PROGES, así como otros especialistas que han manifestado su disposición de ser parte en proyectos específicos gestionados por este equipo.
+        Son presentados aquí los integrantes del  núcleo básico del equipo PROGES.
       </p>
     </section>
     
@@ -67,7 +75,7 @@
             <div class="d-flex justify-content-center">
               <img src="Mica foto.jpg" alt="Micaela de Armas" class="rounded-circle" style="width:150px; height:150px; object-fit: cover;">
             </div>
-            <h3 class="card-title mt-3 text-center">Micaela de Armas</h3>
+            <h3 class="card-title mt-3 text-center">Micaela de Armas Bertossi</h3>
             <p class="card-text">
               Doctoranda en Educación. Magíster en Salud y Deporte. Licenciada en Educación Física, Recreación y Deporte. Estudiante de Licenciatura en Psicología. Integrante de la Red de Apoyo a la Gestión Educativa (RedAGE). Miembro del equipo de investigación PROGES. Docente de grado en Instituto Universitario Asociación Cristiana de Jóvenes en área de gestión y área pedagógica.
             </p>
