--- a/encuentros.html
+++ b/encuentros.html
@@ -20,7 +20,7 @@
     <div class="container justify-content-center">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">¿QUIENES SOMOS?</a>
+          <a class="nav-link" href="index.html">¿QUIÉNES SOMOS?</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="integrantes.html">INTEGRANTES</a>
