--- a/integrantes.html
+++ b/integrantes.html
@@ -73,17 +73,90 @@
         <div class="card h-100 w-100">
           <div class="card-body d-flex flex-column">
             <div class="d-flex justify-content-center">
-              <img src="Mica foto.jpg" alt="Micaela de Armas" class="rounded-circle" style="width:150px; height:150px; object-fit: cover;">
+              <img src="Mica foto.jpeg" alt="Micaela de Armas" class="rounded-circle" style="width:150px; height:150px; object-fit: cover;">
             </div>
             <h3 class="card-title mt-3 text-center">Micaela de Armas Bertossi</h3>
             <p class="card-text">
-              Doctoranda en Educación. Magíster en Salud y Deporte. Licenciada en Educación Física, Recreación y Deporte. Estudiante de Licenciatura en Psicología. Integrante de la Red de Apoyo a la Gestión Educativa (RedAGE). Miembro del equipo de investigación PROGES. Docente de grado en Instituto Universitario Asociación Cristiana de Jóvenes en área de gestión y área pedagógica.
+              Doctoranda en Educación (Universidad Autónoma de Barcelona). Mag. en Salud y Deporte (Universidad Católica del Uruguay). Lic. en Educación Física, Recreación y Deporte (Instituto Universitario Asociación Cristiana de Jóvenes). Estudiante de Lic. en Psicología (Udelar). Se ha desempeñado como docente y tutora de trabajos finales de grado (IUACJ). 
+              Integrante del equipo de investigación PROGES, Uruguay. Colaboradora en la secretaría académica de Revista GestionARTE (RedAGE, Uruguay). Colaboradora como doctoranda en grupo de investigación CRiEDO (UAB).              
             </p>
           </div>
         </div>
       </div>
       
+<!-- Integrante: Eliana Diaz -->
+<div class="col d-flex">
+  <div class="card h-100 w-100">
+    <div class="card-body d-flex flex-column">
+      <div class="d-flex justify-content-center">
+        <img src="ElianaDíaz_ foto.jpeg" alt="ElianaDíaz" class="rounded-circle" style="width:150px; height:150px; object-fit: cover;">
+      </div>
+      <h3 class="card-title mt-3 text-center">Eliana Diaz</h3>
+      <p class="card-text">
+        Magister en Gestión Educativa (ORT). Licenciada en Educación Física, Recreación y Deporte por el Instituto Universitario Asociación Cristiana de Jóvenes (IUACJ), 
+        con Especialización en Actividad Física Adaptada y Discapacidad (IUACJ) y diplomas en Gestión Educativa (ORT) y Gestión Universitaria (UAB-IUACJ). Asistente de Decanato, 
+        y Coordinadora del Área de Gestión y Proyectos en la Licenciatura de IUACJ. Docente titular de asignaturas del Área de Gestión, y tutora de Trabajos Finales de Grado en IUACJ. 
+        Secretaria de RedAGE Uruguay. Miembro del equipo de investigación PROGES, Uruguay.              
+      </p>
     </div>
+  </div>
+</div>
+
+<!-- Integrante: Fernanda Argenta -->
+<div class="col d-flex">
+  <div class="card h-100 w-100">
+    <div class="card-body d-flex flex-column">
+      <div class="d-flex justify-content-center">
+        <img src="Fernanda Argenta foto.jpg" alt="FernandaArgenta" class="rounded-circle" style="width:150px; height:150px; object-fit: cover;">
+      </div>
+      <h3 class="card-title mt-3 text-center">Fernanda Argenta Bruzzone</h3>
+      <p class="card-text">
+        Magíster en Liderazgo y Gestión Educativa (UCU). Licenciada en Ciencias de la Educación Opción: investigación (UdelaR). Maestra Especializada en Educación Inicial.
+         (IINN) Miembro del equipo de investigación PROGES Uruguay. Actualmente se desempeña como Directora de Educación Inicial del Colegio Latinoamericano.              
+      </p>
+    </div>
+  </div>
+</div>
+
+<!-- Integrante: Maximiliano Zito Iglesias --> 
+<div class="col d-flex">
+  <div class="card h-100 w-100">
+    <div class="card-body d-flex flex-column">
+      <div class="d-flex justify-content-center">
+        <img src="Maximiliano Zito Iglesias_foto.JPG" alt="MaxiZitoIglesias" class="rounded-circle" style="width:150px; height:150px; object-fit: cover;">
+      </div>
+      <h3 class="card-title mt-3 text-center">Maximiliano Zito Iglesias</h3>
+      <p class="card-text">
+        Profesor de Historia (Universidad de Montevideo). Licenciado en Humanidades, opción Historia
+         (Universidad de Montevideo). Magíster en Liderazgo y Gestión Educativa (Universidad Católica del Uruguay). 
+         Ha trabajado como profesor de su asignatura en centros educativos públicos y privados de Montevideo. Integrante de la Secretaría de la Revista GestionArte (RedAGE Uruguay),
+          especializada en temas de gestión educativa. Desde 2024, se desempeña como Coordinador del Bachillerato Extraedad en la Escuela y Liceo Elbio Fernández.     
+      </p>
+    </div>
+  </div>
+</div>
+
+<!-- Integrante: Patricia Boragno Balletto --> 
+<div class="col d-flex">
+  <div class="card h-100 w-100">
+    <div class="card-body d-flex flex-column">
+      <div class="d-flex justify-content-center">
+        <img src="Patricia Boragno Balletto.jpg" alt="PatriciaBoragno" class="rounded-circle" style="width:150px; height:150px; object-fit: cover;">
+      </div>
+      <h3 class="card-title mt-3 text-center">Patricia Boragno Balletto</h3>
+      <p class="card-text">
+        Licenciada en Educación Física, recibida en el año 2002 en el Instituto de Educación Física de Montevideo.
+Especializada en Diploma en Gerencia y Gestión Deportiva (2011-2013) y en Maestría en Educación Física y Deportes (2017-2019), ambas carreras en el Instituto Universitario Asociación Cristiana de Jóvenes (IUACJ), en Montevideo-Uruguay.
+
+Desde el año 2005, tengo el cargo de Coordinadora de Educación Física y Deportes de Woodlands School (Montevideo); y desde el año 2016 integro el Equipo de Dirección de Woodlands School.
+Formo parte de PROGES, grupo de investigación que integra la Revista RedAge Uruguay.     
+      </p>
+    </div>
+  </div>
+</div>
+
+
+</div>
   </main>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
