Encuentros y encabezado corregido

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
   <!-- Encabezado -->
   <header class="encabezado">
-    <img src="encabezadoIndex.jpg" alt="Logo de RedAge">
+    <img src="EncabezadoPagPrincipal.jpg" alt="Logo de RedAge">
   </header>
   
   <!-- Barra de navegación -->
