--- a/act.html
+++ b/act.html
@@ -52,7 +52,7 @@
     
     <!-- Información de contacto -->
     <div class="mt-4">
-      <p class="fs-5">Correo: <span id="correo">proges@gmail.com</span> 
+      <p class="fs-5">Correo: <span id="correo">equipoproges@gmail.com</span> 
         <button class="btn btn-outline-primary btn-sm" onclick="copiarCorreo()">Copiar</button>
       </p>
     </div>
