Cambio de encabezado

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
   <!-- Encabezado -->
   <header class="encabezado">
-    <img src="EncabezadoPagPrincipal.jpg" alt="Logo de RedAge">
+    <img src="encabezadoIndex.jpg" alt="Logo de RedAge">
   </header>
   
   <!-- Barra de navegación -->
@@ -75,7 +75,11 @@
   <div class="container mt-5">
     <div class="row justify-content-center">
       <div class="col-md-10 info-proges">
-        <h1 class="text-center text-primary">PROGES</h1>
+       <!-- <h1 class="text-center text-primary">PROGES</h1><br> -->
+        <div style="text-align: center;">
+          <img src="LogoOriginalPROGES.jpg" alt="LogoOriginalPROGES" width="400">
+        </div>
+        
         <h2 class="text-secondary">Identidad</h2>
         <p>
           Quienes formamos parte del equipo PROGES nos consideramos profesionales de la educación interesados en conocer, registrar e intercambiar saberes y experiencias asociadas a los procesos de innovación y cambio educativo. 
