--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Fuente Poppins -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+
   <style>
     body {
       font-family: 'Poppins', sans-serif;
@@ -40,6 +41,15 @@
     ul li {
       margin-bottom: 10px;
     }
+
+    .firma {
+    color: gray;
+    font-size: 12px;
+    text-align: center;
+    opacity: 0.6;
+    margin-top: 20px;
+}
+
   </style>
 </head>
 <body>
@@ -102,5 +112,9 @@
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+<footer>
+  <p class="firma">© 2025 | Desarrollado por Valentina Vázquez</p>
+</footer>
+
 </html>
 
