--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <meta name="google-site-verification" content="dYQnR-RhaPCcoUT8j6kkOAbmQ00teVcxqK9ICBMb_y0" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Página del Equipo</title>
