--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
   <meta name="google-site-verification" content="dYQnR-RhaPCcoUT8j6kkOAbmQ00teVcxqK9ICBMb_y0" />
   <meta charset="UTF-8">
+  <meta name="description" content="En PROGES somos profesionales de la educación comprometidos con la innovación y el cambio educativo, promoviendo la participación activa y el intercambio de saberes bajo principios de ética, colaboración, independencia y respeto.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Página del Equipo</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Fuente Poppins -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <title>Proges</title>
+
 
   <style>
     body {
