--- a/integrantes.html
+++ b/integrantes.html
@@ -156,6 +156,26 @@ Formo parte de PROGES, grupo de investigación que integra la Revista RedAge Uru
 </div>
 
 
+<!-- Integrante: Pietro Cavallero Mateu  --> 
+<div class="col d-flex">
+  <div class="card h-100 w-100">
+    <div class="card-body d-flex flex-column">
+      <div class="d-flex justify-content-center">
+        <img src="Pietro foto.png" alt="Pietro Cavallero Mateu " class="rounded-circle" style="width:150px; height:150px; object-fit: cover;">
+      </div>
+      <h3 class="card-title mt-3 text-center">Pietro Cavallero Mateu </h3>
+      <p class="card-text">
+        Profesor de Historia (Instituto de Profesores Artigas). Maestrando en Liderazgo Pedagógico y Organizacional 
+        (Instituto Universitario CLAEH). Ha trabajado como profesor en centros educativos públicos y privados de 
+        Montevideo. Desde 2017, ha profundizado su formación en cursos y talleres oficiales del Bachillerato 
+        Internacional (IB), con énfasis en planificación, evaluación y desarrollo curricular en el Área de 
+        Individuos y Sociedades. Desde 2021, integra el cuerpo docente del Instituto Universitario Elbio Fernández 
+        en las carreras de MPI y MEP.    
+      </p>
+    </div>
+  </div>
+</div>
+
 </div>
   </main>
   
