Actualizacion en encuentros academicos

--- a/encuentros.html
+++ b/encuentros.html
@@ -202,11 +202,21 @@
       </ul>
       <h3>Simposio presentado:</h3>
       <p class="card-text">“Liderazgos y contextos: promotores e inhibidores de la transformación”</p>
+      <a href="congreso 2025/Simposio_EDO_2025_aceptado.pdf"
+        target="_blank">Ver PDF</a>
 
       <!-- Feed horizontal de material audiovisual para VIII CONGRESO INTERNACIONAL EDO (2025) -->
-      <div class="horizontal-scroll mt-3 text-center">
-        <img src="congreso 2025/Screenshot 2025-02-11 093257.png" alt="Material Audiovisual 1" class="img-fluid" style="max-width: 70%; border-radius: 8px;">
-      </div>
+      <div class="horizontal-scroll mt-3">
+              <img src="congreso 2025/Screenshot 2025-02-11 093257.png" alt="Material Audiovisual 1">
+              <img src="congreso 2025/Cero_Congreso2025_8.jpg" alt="Material Audiovisual 2">
+              <img src="congreso 2025/Primera_Congreso2025_1.jpg" alt="Material Audiovisual 3">
+              <img src="congreso 2025/Segunda_Congreso2025_2.jpg" alt="Material Audiovisual 4">
+              <img src="congreso 2025/Tercera_Congreso2025_3.jpg" alt="Material Audiovisual 5">
+              <img src="congreso 2025/Cuarta_Congreso2025_4.jpg" alt="Material Audiovisual 6">
+              <img src="congreso 2025/Quinta_Congreso2025_5.jpg" alt="Material Audiovisual 7">
+              <img src="congreso 2025/Sexta_Congreso2025_6.jpg" alt="Material Audiovisual 8">
+              <img src="congreso 2025/Septima_Congreso2025_7.jpg" alt="Material Audiovisual 9">
+            </div>
       <!-- Fin feed horizontal -->
 
     </div>
