actualizacion de foto integrante

--- a/integrantes.html
+++ b/integrantes.html
@@ -161,7 +161,7 @@ Formo parte de PROGES, grupo de investigación que integra la Revista RedAge Uru
   <div class="card h-100 w-100">
     <div class="card-body d-flex flex-column">
       <div class="d-flex justify-content-center">
-        <img src="Pietro foto.png" alt="Pietro Cavallero Mateu " class="rounded-circle" style="width:150px; height:150px; object-fit: cover;">
+        <img src="Pietro foto.jpg" alt="Pietro Cavallero Mateu " class="rounded-circle" style="width:150px; height:150px; object-fit: cover;">
       </div>
       <h3 class="card-title mt-3 text-center">Pietro Cavallero Mateu </h3>
       <p class="card-text">
