Arreglo en foto de integrante

--- a/integrantes.html
+++ b/integrantes.html
@@ -161,9 +161,11 @@ Formo parte de PROGES, grupo de investigación que integra la Revista RedAge Uru
   <div class="card h-100 w-100">
     <div class="card-body d-flex flex-column">
       <div class="d-flex justify-content-center">
-        <img src="Pietro foto.jpg" alt="Pietro Cavallero Mateu " class="rounded-circle" style="width:150px; height:150px; object-fit: cover;">
+        <img src="Pietro foto.jpg" alt="Pietro Cavallero Mateu" 
+             class="rounded-circle" 
+             style="width:150px; height:150px; object-fit: cover; object-position: center 30%;">
       </div>
-      <h3 class="card-title mt-3 text-center">Pietro Cavallero Mateu </h3>
+      <h3 class="card-title mt-3 text-center">Pietro Cavallero Mateu</h3>
       <p class="card-text">
         Profesor de Historia (Instituto de Profesores Artigas). Maestrando en Liderazgo Pedagógico y Organizacional 
         (Instituto Universitario CLAEH). Ha trabajado como profesor en centros educativos públicos y privados de 
@@ -174,6 +176,8 @@ Formo parte de PROGES, grupo de investigación que integra la Revista RedAge Uru
       </p>
     </div>
   </div>
+</div>
+
 </div>
 
 </div>
